# gt_slate_brain

./: .dockerignore  .gitignore  .mcp.json  .tmp_predictions.jsonl  .tmp_test_b64_query.py  .tmp_test_quoting.py  BASELINE_PURITY_REPORT.md  BOTTLENECK_EVIDENCE_PACKET.md  BRAIN_CAPABILITY_AUDIT.md  BRAIN_METRICS_SPEC.md  BRAIN_PAIRED_EVAL_RUNBOOK.md  CHANGELOG.md  CLAUDE.md  DECISION_IMPLEMENTATION_MATRIX.md  DOC_OF_HONOR.md  Dockerfile  Dockerfile.swebench  EXPERIMENT_PROACTIVE_BRAIN.md  FINAL_BUILD_GATE_REPORT.md  FLIP_AUDIT.md  GT_ARCHITECTURE_CONTRACT.md  LAST_MILE_AUDIT.md  LAST_MILE_VERIFY.md  LATEST_TASK.md  LICENSE  OLD_SESSION_CLOSEOUT.md  README.md  RESEARCH_STRUCTURAL_TWIN.md  RESPEC.md  RUNTIME_FUCKUPS.md  RUNTIME_PARITY_AUDIT.md  SLATE_BRAIN.md  TIER1_GATE_REPORT.md  TIER2_GATE_REPORT.md  TIER_FULL_STATE_HYGIENE.md  VALIDATION_REPORT.md  VALIDATION_SET_PLAN.md  alignment.md  decisions.md  deep_metrics.md  (+10 more)
.claude/: CLAUDE.md  RUNBOOK_PRODUCT_V1.md
.github/: CODEOWNERS
artifact_deepswe/: gt_agent.py  gt_mini_patch.py  repo_manifest.json
benchmarks/: README.md  __init__.py  _fixtures.py  holdout_10_locked.json  live_lite_300_ids.json  runner.py
config/: gt_track4.yaml
configs/: baseline_oh_qwen3coder_live_lite.toml
docs/: GENERALIZATION_CONTRACT_V2.md  HANDOFF_GEN_EVAL_GITHUB_ACTIONS.md  HOW_TO_RUN_EVALS.md  METRICS_CONTRACT_V2.md  SWE_BENCH_LIVE_LITE_OPS.md  github_actions_setup.md  pipeline.md  swebench_30task_runbook.md  v7_4_feasibility_report.md  workflows-github.md
docs/kernel/: API.md  (+1 more)
gt-index/: ASSERTION_FIX.md  go.mod  go.sum
opensource/: README.md
reports/: GENERAL_GRAPH_CREATION_DESIGN.md  GRAPH_CREATION_METRIC_DIAGNOSIS.md  HYPOTHESIS_ISOLATION_PLAN.md  PHASE1_GRAPH_VERIFICATION.md  SYSTEM_PROOF_2026_05_16.md
scripts/: audit_l2_localization.py  build_gt_index_linux.sh  build_replay_fixture.py  cal_manifest_check.py  cal_metrics.py  cal_metrics_qwen.py  cal_shard_reconcile.py  compute_canary_metrics.py  compute_run_metrics.py  cursor_rerun_tables.py  deep_metrics.py  deepswe_aggregate.py  deepswe_parse_result.py  diagnose_failures.py  eval_tranche.py  full_architecture_audit.py  gen6_deep_table.py  gen6_real_tables.py  graph_quality_metrics.py  gt_autopsy.py  gt_check_claims.py  gt_collect_artifacts.py  gt_verify_topology.py  localization_metrics.py  make_cal20_manifest.py  mine_feasibility_tranche.py  open_risk_map_mock.py  preflight_checks.py  pull_benchmark_stats.sh  repro_v2_live_silence.py  run_benchmark_and_upload.sh  run_benchmark_aws.md  run_benchmark_with_config.py  shadow_replay.py  vertex_preflight.py  vertex_qwen_preflight.py
tests/: conftest.py  smoke_gt_hook.py  test_l5_unverified_patch.py  test_p0_p6_edge_cases.py  test_p12_security_edge_cases.py  test_p14_serde_edge_cases.py  test_p2_params_edge_cases.py  test_sprint1_edge_cases.py  test_trajectory.py  test_trajectory_integration.py
(+1393 files in other folders)
