[project]
name = "groundtruth-mcp"
version = "1.0.0"
description = "MCP server — compiler-grade codebase intelligence for AI coding agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["mcp", "lsp", "code-intelligence", "ai-agents", "codebase-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "mcp>=1.0.0,<3.0",
    "pydantic>=2.0.0,<3.0",
    "structlog>=24.0.0,<26.0",
]

[project.urls]
Homepage = "https://github.com/harneet2512/groundtruth"
Repository = "https://github.com/harneet2512/groundtruth"
Issues = "https://github.com/harneet2512/groundtruth/issues"

[project.optional-dependencies]
# RC-17 (F-007): every >= floor now has an upper bound so a transitive
# major-version bump can't silently change run behavior between two
# Phase 4/Phase 5 launches. The committed requirements.lock at repo root
# is the actual authoritative pin set; these bounds are the second line
# of defense for `pip install -e '.[benchmark]'` without --frozen.
ai = ["anthropic>=0.30.0,<1"]
gitignore = ["pathspec>=0.12.0,<1"]
dev = [
    "pytest>=8.0.0,<9",
    "pytest-asyncio>=0.23.0,<1",
    "pytest-timeout>=2.3.0,<3",
    "pytest-cov>=5.0.0,<7",
    "mypy>=1.10.0,<2",
    "ruff>=0.4.0,<1",
    "coverage>=7.0.0,<8",
    "pathspec>=0.12.0,<1",
]
benchmark = [
    "openai>=1.0.0,<2",
    "anyio>=4.0.0,<5",
    "datasets>=2.0.0,<3",
    "swebench>=2.0.0,<5",
    # RC-17 (F-006): pin SWE-agent at the version the YAML's tool-load-order
    # logic was tested against. The runner's preflight asserts
    # sweagent.__version__ == EXPECTED_SWEAGENT_VERSION at launch time.
    "sweagent==1.1.0",
    # RC-17 (F-012): pin litellm so cost-rounding and tool-call parsing
    # don't drift between runs. Bump deliberately, not transitively.
    "litellm==1.80.10",
]

[project.scripts]
groundtruth = "groundtruth.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/groundtruth"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
strict = true
python_version = "3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
norecursedirs = ["tests/fixtures", "tests/layers/fixtures", "tests/_archive_swe_agent"]
markers = [
    "behavioral: trajectory-level behavioral acceptance tests",
    "unverified: data-dependent checks that may skip when corpus lacks triggers",
]
